# calcy

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
dnas/calcy/workdir/: dna.yaml
dnas/calcy/zomes/integrity/syn/: Cargo.toml
dnas/griffy/workdir/: dna.yaml
dnas/griffy/zomes/coordinator/profiles/: Cargo.toml
dnas/griffy/zomes/coordinator/syn/: Cargo.toml
dnas/griffy/zomes/integrity/profiles/: Cargo.toml
tests/: package.json
tests/src/griffy/griffy/: common.ts
ui/: index.html  package.json
ui/public/: global.css
ui/src/: AboutDialog.svelte  App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  AvatarDialog.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  CalcyPane.svelte  ClickEdit.svelte  Controller.svelte  ControllerBlockActiveBoards.svelte  ControllerBoard.svelte  ControllerCreate.svelte  EditBoardDialog.svelte  EmojiIcon.svelte  Folk.svelte  GriffyPane.svelte  GroupParticipants.svelte  NewBoardDialog.svelte  Participants.svelte  ReactAdapter.svelte  Search.svelte  SvgIcon.svelte  Toolbar.svelte  app.css  board.ts  boardList.ts  export.ts  index.js  store.ts  svgIcons.ts  types.d.ts  util.ts  we.ts
ui/src/icons/: LogoIcon.svelte
we_dev/: config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
