[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.3"
hdk = "0.2"
serde = "1"

[workspace.dependencies.calcy]
path = "dnas/calcy/zomes/coordinator/calcy"

[workspace.dependencies.calcy_integrity]
path = "dnas/calcy/zomes/integrity/calcy"

[workspace.dependencies.profiles]
path = "dnas/calcy/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/calcy/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/calcy/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/calcy/zomes/integrity/file_storage"
