[package]
edition = "2021"
name = "syn_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn_integrity"

[dependencies]
#chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
#derive_more = "0"
#serde = { workspace = true }

hc_zome_syn_integrity = {git = "https://github.com/holochain/syn", branch = "main"}
